added basic endpoints

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>FastAPI App</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
-    <h1 id="msg">Loading...</h1>
+    <div class="card">
+      <h1>File Management GCP</h1>
+      <div id="status" class="status loading">
+        Connecting to backend...
+      </div>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
